[gd_scene load_steps=7 format=3 uid="uid://csmxxyvc2ea5b"]

[ext_resource type="PackedScene" uid="uid://barm7jl1pa2yo" path="res://3d/slot.glb" id="1_preet"]
[ext_resource type="Script" path="res://scenes/slotmachine.gd" id="2_nh5xd"]
[ext_resource type="AudioStream" uid="uid://c3ruseterhy5h" path="res://audio/slot_win.ogg" id="3_eusot"]
[ext_resource type="AudioStream" uid="uid://d7847n7wyrfi" path="res://audio/slot_pull.ogg" id="4_8p161"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pvfry"]
height = 1.4123
radius = 0.422729

[sub_resource type="BoxShape3D" id="BoxShape3D_divag"]
size = Vector3(1.25704, 5.05453, 1)

[node name="slot" instance=ExtResource("1_preet")]
script = ExtResource("2_nh5xd")

[node name="slots" parent="." index="1"]
transform = Transform3D(-0.599418, 0, -1.95315e-07, 0, 0.599418, 0, 1.95315e-07, 0, -0.599418, 0.141478, 0.119322, 1.63983)

[node name="crank" parent="." index="2"]
transform = Transform3D(-0.599418, -6.97212e-07, -4.02535e-07, 0, 0.299709, -0.519111, 8.05072e-07, -0.519111, -0.299709, -0.681142, 1.16132, 1.06836)

[node name="spins" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.138821, 1.2908, 1.3055)

[node name="spin000" parent="spins" index="0" groups=["spin"]]

[node name="spin001" parent="spins" index="1" groups=["spin"]]

[node name="spin002" parent="spins" index="2" groups=["spin"]]

[node name="spin003" parent="spins" index="3" groups=["spin"]]

[node name="stars" parent="." index="4"]
transform = Transform3D(0.148736, 0, 0, 0, 0, -0.148736, 0, 0.148736, 0, 0.13254, 1.93175, 1.13488)

[node name="StaticBody3D" type="StaticBody3D" parent="." index="6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
shape = SubResource("CylinderShape3D_pvfry")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.133254, 0, 1.55023)
shape = SubResource("BoxShape3D_divag")

[node name="TimeOut" type="Timer" parent="." index="7"]
wait_time = 2.0
one_shot = true

[node name="OmniLight3D" type="OmniLight3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.168355, 2.20666, 1.04048)
light_color = Color(0.741176, 0.819608, 0.858824, 1)
light_energy = 0.5
shadow_enabled = true
omni_range = 2.0

[node name="sfx_win" type="AudioStreamPlayer3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0.13254, 1.93175, 1.13488)
stream = ExtResource("3_eusot")
volume_db = -15.0

[node name="sfx_pull" type="AudioStreamPlayer3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0.13254, 1.93175, 1.13488)
stream = ExtResource("4_8p161")
volume_db = -9.0
